made data structures consistent for all subdiv levels

--- a/TrismeshTests.ipynb
+++ b/TrismeshTests.ipynb
@@ -132,10 +132,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[1., 0., 0., 0.],\n",
-       "       [0., 1., 0., 0.],\n",
-       "       [0., 0., 1., 0.],\n",
-       "       [0., 0., 0., 1.]])"
+       "(array([[1., 0., 0., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 0., 1., 0.],\n",
+       "        [0., 0., 0., 1.]]),)"
       ]
      },
      "execution_count": 4,
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "tetMesh.filter"
+    "tetMesh.filters"
    ]
   },
   {
@@ -246,7 +246,7 @@
     }
    ],
    "source": [
-    "tetMesh.filter.shape"
+    "tetMesh.filters[0].shape"
    ]
   },
   {
@@ -257,16 +257,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+       "(10, 4)"
       ]
      },
      "execution_count": 8,
@@ -275,7 +266,7 @@
     }
    ],
    "source": [
-    "tetMesh.subdivide().filter"
+    "tetMesh.subdivide().filters[0].shape"
    ]
   },
   {
@@ -286,7 +277,7 @@
     {
      "data": {
       "text/plain": [
-       "(34, 34)"
+       "(34, 10)"
       ]
      },
      "execution_count": 9,
@@ -295,7 +286,7 @@
     }
    ],
    "source": [
-    "tetMesh.subdivide().subdivide().filter.shape"
+    "tetMesh.subdivide().subdivide().filters[0].shape"
    ]
   },
   {
