--- a/TrismeshTests.ipynb
+++ b/TrismeshTests.ipynb
@@ -174,59 +174,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "mesh level 1\n",
-       "vertices: \n",
-       "[[ 0.94280904  0.         -0.33333333]\n",
-       " [-0.47140452  0.81649658 -0.33333333]\n",
-       " [-0.47140452 -0.81649658 -0.33333333]\n",
-       " [ 0.          0.          1.        ]\n",
-       " [ 0.23570226  0.40824829 -0.33333333]\n",
-       " [ 0.23570226 -0.40824829 -0.33333333]\n",
-       " [ 0.47140452  0.          0.33333333]\n",
-       " [-0.47140452  0.         -0.33333333]\n",
-       " [-0.23570226  0.40824829  0.33333333]\n",
-       " [-0.23570226 -0.40824829  0.33333333]]\n",
-       "faces: \n",
-       "[[0 4 5]\n",
-       " [4 1 7]\n",
-       " [5 7 2]\n",
-       " [4 7 5]\n",
-       " [0 4 6]\n",
-       " [4 1 8]\n",
-       " [6 8 3]\n",
-       " [4 8 6]\n",
-       " [1 7 8]\n",
-       " [7 2 9]\n",
-       " [8 9 3]\n",
-       " [7 9 8]\n",
-       " [2 9 5]\n",
-       " [9 3 6]\n",
-       " [5 6 0]\n",
-       " [9 6 5]]\n",
-       "weights: \n",
-       "[[1.]\n",
-       " [1.]\n",
-       " [1.]\n",
-       " [1.]\n",
-       " [0.]\n",
-       " [0.]\n",
-       " [0.]\n",
-       " [0.]\n",
-       " [0.]\n",
-       " [0.]]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tetMesh.subdivide()"
+    "tet2 = tetMesh.subdivide()\n",
+    "tet3 = tet2.subdivide()\n",
+    "tet4 = tet3.subdivide()"
    ]
   },
   {
@@ -235,18 +187,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(4, 4)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 4)\n"
+     ]
     }
    ],
    "source": [
-    "tetMesh.filters[0].shape"
+    "print(tetMesh.filters[0].shape)"
    ]
   },
   {
@@ -255,18 +204,21 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(10, 4)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 4)\n",
+      "(10, 6)\n",
+      "(4, 10)\n",
+      "(6, 10)\n"
+     ]
     }
    ],
    "source": [
-    "tetMesh.subdivide().filters[0].shape"
+    "print(tet2.filters[0].shape)\n",
+    "print(tet2.filters[1].shape)\n",
+    "print(tet2.filters[2].shape)\n",
+    "print(tet2.filters[3].shape)"
    ]
   },
   {
@@ -275,18 +227,21 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(34, 10)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(34, 10)\n",
+      "(34, 24)\n",
+      "(10, 34)\n",
+      "(24, 34)\n"
+     ]
     }
    ],
    "source": [
-    "tetMesh.subdivide().subdivide().filters[0].shape"
+    "print(tet3.filters[0].shape)\n",
+    "print(tet3.filters[1].shape)\n",
+    "print(tet3.filters[2].shape)\n",
+    "print(tet3.filters[3].shape)"
    ]
   },
   {
