--- a/Encode.ipynb
+++ b/Encode.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,6 +296,26 @@
     "coarse = np.insert(coarse, 3, 0, axis=0) #add empty subwoofer channel for reproduction in the studio\n",
     "\n",
     "sf.write('panHop100.wav',coarse.T,samplerate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11, 445)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.phi2s[0].shape"
    ]
   },
   {
