got working with realtime

--- a/Encode.ipynb
+++ b/Encode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,30 @@
     "facesOCT = np.array([[1,2,4],[1,3,4],[3,0,4],[0,2,4],[1,3,5],[3,0,5],[0,2,5],[2,1,5]])\n",
     "\n",
     "model = OptimalSWF(vertices704,faces704).model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save encoder and vertex arrays for use in Max MSP\n",
+    "encoder = model.phi2s[0]\n",
+    "np.savetxt('encoder.txt',encoder,newline=';\\n')\n",
+    "for line in fileinput.input('encoder.txt',inplace=True):\n",
+    "    sys.stdout.write('%d, %s'%(fileinput.filelineno(), line))\n",
+    "\n",
+    "#save fine mesh coordinates in azimuth,elevation format for use in Max MSP\n",
+    "cartesian = model.meshes[-1].vertices\n",
+    "azimuth = np.arctan2(cartesian[:,0],cartesian[:,1]).reshape(-1,1)\n",
+    "elevation = np.arctan2(cartesian[:,1],cartesian[:,2]).reshape(-1,1)\n",
+    "coords = np.hstack((azimuth,elevation))\n",
+    "coords = np.around(np.degrees(coords),6)\n",
+    "np.savetxt('coords.txt',coords.flatten().reshape((1,-1)),fmt='% f')\n",
+    "\n",
+    "#save fine mesh faces for use in Max MSP\n",
+    "np.savetxt('triangles.txt',model.meshes[-1].faces.flatten().reshape((1,-1)),fmt='%d')"
    ]
   },
   {
@@ -316,22 +340,6 @@
    ],
    "source": [
     "model.phi2s[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#save encoder and vertex arrays for use in Max MSP\n",
-    "encoder = model.phi2s[0]\n",
-    "np.savetxt('encoder.txt',encoder,newline=';\\n')\n",
-    "for line in fileinput.input('encoder.txt',inplace=True):\n",
-    "    sys.stdout.write('%d, %s'%(fileinput.filelineno(), line))\n",
-    "np.savetxt('vertices.txt',model.meshes[-1].vertices,newline=';\\n')\n",
-    "for line in fileinput.input('vertices.txt',inplace=True):\n",
-    "    sys.stdout.write('%d, %s'%(fileinput.filelineno(), line))"
    ]
   },
   {
