got maxpat working with new transcoding layout in 7.1.4 case

--- a/Transcoding.ipynb
+++ b/Transcoding.ipynb
@@ -176,31 +176,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0.5034307474557635, 0.03917028655251564, -0.021300517004139596],\n",
-       " [0.5137027177221947, 0.06501975658451677, -0.03936123715335571],\n",
-       " [0.5317109384578423, 0.0007191772671070629, -0.01621505786247468],\n",
-       " [0.5487505429219699, 0.030082689207314394, -0.03941661606464214],\n",
-       " [0.5700115831905237, 0.09351952106759379, -0.08176555212905873],\n",
-       " [0.5218319879303325, 0.052168671410454476, -0.03700032967039346]]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "key"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -223,12 +198,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoder = optimal.phi2s[0]"
+    "encoder = optimal.phi2s[3]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11, 845)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoder.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
