--- a/Evaluation.ipynb
+++ b/Evaluation.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "d4168f01-574d-44f8-9276-b21e5b343d97",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
     "\n",
     "subplots[0,1].legend(loc=1)\n",
     "fig.tight_layout()\n",
-    "plt.savefig('SWFvsVBAP.png')"
+    "plt.savefig('SWFvsVBAP_unit_energy.png')"
    ]
   },
   {
